--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,3 +1,60 @@
 .message {
+    margin: 10px 0 0 10px;
+    color: whitesmoke;
+}
+.image {
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 30px;
+    border: 1px solid gray;
+    float: left;
+    margin: 48px 10px 0 0;
+}
 
+.content {
+    height: 55px;
+    width: 200px;
+    background-color: #082103;
+    float: left;
+    margin-top: 30px;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-top: 5px;
+}
+
+/*ТРЕУГОЛЬНИК*/
+
+.content::after {
+    content: "";
+    z-index: 0;
+    position: absolute;
+    top: 142px;
+    left: 47px;
+    border: 10px solid transparent;
+    border-right: 10px solid #082103;
+    border-bottom: 10px solid #082103;
+}
+
+.name {
+    color: darkorchid;
+    font-size: 14px;
+}
+
+.text {
+    color: #D8ECD3;
+    font-size: 13px;
+}
+
+.time {
+    color: limegreen;
+    position: relative;
+    left: 165px;
+    bottom: 15px;
+    z-index: 1;
+    font-size: 12px;
+}
+
+.clear {
+    clear: both;
 }
