--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,3 +1,15 @@
-.someClass {
+.someClass {}
 
+.affair {
+    display: flex;
+    width: 300px;
+}
+
+.item {
+    margin: 0;
+    width: 100px;
+}
+
+.active {
+    background: green;
 }
