--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,32 +1,20 @@
-.greet {
-    padding: 20px;
-}
-.Greeting {
-    display: flex;
+.someClass {
+
 }
 
-.inputClass {
-    margin-left: 10px;
-    padding: 5px 20px;
-    border: none;
-    border-radius: 0 0 0 20px;
-    background-color: palegreen;
-    outline: none;
-    height: 20px;
-}
-.inputClass:hover,
-.inputClass:focus {
-    opacity: 0.7;
-}
-.add {
-    padding: 2px 20px;
-    border-radius: 0 20px 0 0;
-    background-color: palegreen;
-}
-.add:hover {
-    opacity: 0.7;
+.input {
+    background-color: mediumaquamarine;
 }
 
 .error {
-    background-color: lightcoral;
+    border: 1px solid darkred;
+    background-color: rosybrown;
+}
+
+.errorMessage {
+    color: darkred;
+}
+
+.buttonAdd, .totalUsers {
+    font-weight: bold;
 }
