--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -11,3 +11,11 @@
 .testSpanError {
     color: blue;
 }
+.spanClassName {}
+
+.error {
+    color: red;
+}
+.errorInput {
+    background-color: red;
+}
