--- a/src/p2-homeworks/h2/Affairs.module.css
+++ b/src/p2-homeworks/h2/Affairs.module.css
@@ -1,4 +1,5 @@
-.someClass {}
+.someClass {
+}
 
 .affair {
     display: flex;
@@ -11,5 +12,22 @@
 }
 
 .active {
-    background: green;
+    background: darkgrey;
+    font-weight: bold;
+}
+
+.high {
+    color: darkred;
+}
+
+.middle {
+    color: orangered;
+}
+
+.low {
+    color: green;
+}
+
+.buttonDelete {
+    font-weight: bold;
 }
