--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -2,6 +2,10 @@
     border-bottom: 5px solid blue;
 }
 
+.hw {
+    font-weight: bold;
+}
+
 .column {
     display: flex;
     flex-direction: column;
